src/test/deca/context/invalid/SansObjet/DeclVar-Plus-boolean-float-float.deca
// Description:
//    Declaration of a boolean variable using + operation between a float variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  10.01; 
    float y = 1.5; 
    boolean z = 10.01 + 1.5; 
}
